adicao da porta_NTIC

--- a/porta_NTIC/index.html
+++ b/porta_NTIC/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
   </head>
 <body>
 
@@ -24,13 +24,13 @@
         <div class="navbar-header">
         
           <div class="navbar-brand">
-            <a href="index.html"><h1>Instituto Federal de Brasília</h1></a>  <span class="dirName">Diretoria de Tecnologia da Informação - <span class="sigla">DTIC</span> </span>
+            <a href="index.html"><h1>Instituto Federal de Brasília</h1></a>  <span>Diretoria de Tecnologia da Informação - DTIC </span>
      
           </div>
 
            <div id="phone_header" class="hidden-xs">
 			    <a class="btn" href="tel:06121032129">
-			    <span class="glyphicon glyphicon-earphone tel"></span>
+			    <span class="glyphicon glyphicon-earphone"></span>
 			     (61) 2103-2129
 			    </a>
   		   </div>
@@ -44,11 +44,11 @@
 
   <div id="call-btn" class="visible-xs">
     <a class="btn" href="tel:06121032129">
-    <span class="glyphicon glyphicon-earphone tel"></span>
+    <span class="glyphicon glyphicon-earphone"></span>
      (61) 2103-2129
     </a>
   </div>
-  <div id="xs-deliver" class="text-center visible-xs"> Telefone do <span class="sigla">DTIC</span></div>
+  <div id="xs-deliver" class="text-center visible-xs"> Telefone do DTIC</div>
 
 
 
@@ -65,12 +65,12 @@
                       <img src="images/icon_ifb.png" id="img-icon">
                       </div>
                       <div id="number">
-                      <h5><b class="number">106</b></h5>
+                      <h5><b>106</b></h5>
                       </div>
                     </div>
 
                     <div class="col-xs-9" id="part-green">
-                        <h1> <b><center><span class="dirName">Diretoria de Tecnologia da Informação e Comunicação</span> - <span>DTIC</span></center></b></h1>
+                        <h1> <b><center>Núcleo de Tecnologia da Informação e Comunicação - NTIC</center></b></h1>
                     </div>
                     </div>
 
@@ -80,7 +80,7 @@
 
 	<div id = "horario" class= "col-xs-12 text-center">
 		<span>Horário de Funcionamento</span><br>
-		<span class = "schedule">De segunda a sexta-feira, das 7h às 20h</span>
+		De segunda a sexta-feira, das 7h às 20h
 	</div> 
 
 
@@ -89,11 +89,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="text-center text-primary sigla">DTIC</h1>
+                        <h1 class="text-center text-primary">DTIC</h1>
                         <p class="text-center">Responsáveis</p>
                     </div>
                 </div>
-                <div class="row responsaveis">
+                <div class="row">
                     <div class="col-md-4">
                         <img src="images/anderson.jpg" alt="Conheça o DTIC" 
                         class="img-quadrata center-block" >
@@ -213,7 +213,7 @@
   <div class="container">
 	<div class="row">
 
-      	 <div class="text-center">Instituto Federal de Brasília - Diretoria de Técnologia da Informação e Comunicação (DTIC)
+      	 <div class="text-center">Instituto Federal de Brasília - Núcleo de Técnologia da Informação e Comunicação (NTIC)
   	 </div>
    </div>
   </div>
@@ -225,7 +225,7 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/ajax-utils.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
   <script src="js/script.js"></script>
 
 </body>
